# ec_final

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yaml
connections/: functions_connections.py  request_api.py  send_aws_s3.py
data/: create_substacoes.py  functions_data.py  generate_merged_base.py  ml_data.py  transform_api_data.py  transform_database.py
functions/: ml_model.py
tests/: test_functions.py
